branch bbb aanpassing

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,8 @@
               ante quis felis fringilla condimentum.
             </p>
             <p>
-		branch aaa 
+		branch aaa
+		en branch bbb 
               Aenean orci ante, venenatis non adipiscing vitae, fringilla et
               neque. In pharetra, eros imperdiet luctus imperdiet, nunc sem
               pharetra mi, vel faucibus elit risus id tortor.
@@ -63,6 +64,9 @@
               />Subheading
             </h3>
             <p>
+
+		branch bbb
+
               Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
               felis fringilla condimentum. Aenean orci ante, venenatis non
               adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
