branch bbb aanpassing extra

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,8 @@
             </p>
             <p>
 		branch aaa
-		en branch bbb 
+		en branch 'bbb'
+ 
               Aenean orci ante, venenatis non adipiscing vitae, fringilla et
               neque. In pharetra, eros imperdiet luctus imperdiet, nunc sem
               pharetra mi, vel faucibus elit risus id tortor.
