--- a/html/index.html
+++ b/html/index.html
@@ -49,6 +49,8 @@
 
 		main aanpassing
 
+		Dit is nog een aanpassing maar geen verhaaltje, er zijn geen pesters. Gewoon een vragen steller. Aanwezig zijn is al voldoende en de fury is annoying.
+
               Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
               felis fringilla condimentum. Aenean orci ante, venenatis non
               adipiscing vitae, fringilla et neque. In pharetra, eros imperdiet
