--- a/html/index.html
+++ b/html/index.html
@@ -42,13 +42,14 @@
 		branch aaa
 		en branch 'bbb'
  
-              Aenean orci ante, venenatis non adipiscing vitae, fringilla et
-              neque. In pharetra, eros imperdiet luctus imperdiet, nunc sem
-              pharetra mi, vel faucibus elit risus id tortor.
+		Pesten is verkeerd, is uitlachen dat ook? Is ermee lachen dat ook?
+
             </p>
             <p>
 
 		main aanpassing
+
+		Dit is nog een aanpassing maar geen verhaaltje, er zijn geen pesters. Gewoon een vragen steller. Aanwezig zijn is al voldoende en de fury is annoying.
 
               Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
               felis fringilla condimentum. Aenean orci ante, venenatis non
